--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
     "start": "rimraf dist && tsc-watch --onSuccess \"npm run watch\"",
     "watch": "nodemon \"src/app.ts\" --watch \"./src\""
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.2",
-    "package-json": "^8.1.1",
-    "semver": "^7.5.4"
+    "mongoose": "^7.5.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
@@ -26,11 +22,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "prettier": "^3.0.3"
   }
 }
