--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gitignore": "^0.7.0",
+    "joi": "^17.10.2",
     "mongoose": "^7.5.2"
   },
   "devDependencies": {
@@ -20,14 +22,14 @@
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-import": "^2.28.1",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.2.2",
-    "prettier": "^3.0.3"
+    "typescript": "^5.2.2"
   }
 }
